// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighlightText ignores empty phrase entries (defensive) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(51, 51, 51, 0.5)",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "#FCE7CF",
            "borderRadius": 4,
            "color": "#111111",
            "paddingHorizontal": 4,
          }
        }
      >
        Quick
      </Text>
      <Text>
         body.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`HighlightText renders the body plain when no phrase matches 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(51, 51, 51, 0.5)",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      <Text>
        Plain copy with nothing to highlight.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`HighlightText wraps a single matching phrase in a pill segment 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(51, 51, 51, 0.5)",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      <Text>
        Anytime, with 
      </Text>
      <Text
        style={
          {
            "backgroundColor": "#FCE7CF",
            "borderRadius": 4,
            "color": "#111111",
            "paddingHorizontal": 4,
          }
        }
      >
        no internet, no signal
      </Text>
      <Text>
         — nice.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`HighlightText wraps multiple distinct phrases in separate pills 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(51, 51, 51, 0.5)",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        }
      }
    >
      <Text
        style={
          {
            "backgroundColor": "#FCE7CF",
            "borderRadius": 4,
            "color": "#111111",
            "paddingHorizontal": 4,
          }
        }
      >
        No accounts.
      </Text>
      <Text>
         
      </Text>
      <Text
        style={
          {
            "backgroundColor": "#FCE7CF",
            "borderRadius": 4,
            "color": "#111111",
            "paddingHorizontal": 4,
          }
        }
      >
        No cloud.
      </Text>
      <Text>
         
      </Text>
      <Text
        style={
          {
            "backgroundColor": "#FCE7CF",
            "borderRadius": 4,
            "color": "#111111",
            "paddingHorizontal": 4,
          }
        }
      >
        No tracking.
      </Text>
      <Text>
         We promise.
      </Text>
    </Text>
  </View>
</View>
`;
